--- a/StreamServer/StreamServer.vcxproj
+++ b/StreamServer/StreamServer.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{13F435F6-3B3B-4FD3-92A7-62646F096156}</ProjectGuid>
     <RootNamespace>StreamServer</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -32,8 +33,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v110</PlatformToolset>
+    <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -43,7 +44,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -102,7 +103,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>./;./Stream;./Network/Listen;./Network/Session;../Common/;../Codec/;../Multiplex/;../FFMPEG/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./;./Stream;./Network/Listen;./Network/Session;../Common/;../Codec/;../Multiplex/;../FFMPEG/Win/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;_CONSOLE;__STDC_CONSTANT_MACROS;__STDC_FORMAT_MACROS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -113,7 +114,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>../FFMPEG/lib/64bit</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../FFMPEG/Win/lib/64bit</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -139,54 +140,58 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;_CONSOLE;__STDC_CONSTANT_MACROS;__STDC_FORMAT_MACROS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <AdditionalIncludeDirectories>./;./Stream;./Network/Listen;./Network/Session;../Common/;../Codec/;../Multiplex/;../FFMPEG/Win/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <AdditionalLibraryDirectories>../FFMPEG/Win/lib/64bit</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Codec\Codec.cpp" />
-    <ClCompile Include="..\Codec\CodecManager.cpp" />
     <ClCompile Include="..\Codec\Decoder.cpp" />
     <ClCompile Include="..\Codec\Encoder.cpp" />
     <ClCompile Include="..\Common\ConnectSocket.cpp" />
+    <ClCompile Include="..\Common\ObjectManager.cpp" />
     <ClCompile Include="..\Common\SocketThread.cpp" />
     <ClCompile Include="..\Multiplex\Demuxer.cpp" />
-    <ClCompile Include="Network\Listen\WinListenSocket.cpp" />
+    <ClCompile Include="..\Multiplex\Muxer.cpp" />
+    <ClCompile Include="Network\Listen\ListenSocket.cpp" />
     <ClCompile Include="Network\Session\SessionSocket.cpp" />
     <ClCompile Include="Network\Session\SessionThread.cpp" />
-    <ClCompile Include="StreamServer.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StreamServer.cpp" />
     <ClCompile Include="Stream\StreamSource.cpp" />
     <ClCompile Include="Stream\StreamThread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Codec\Codec.h" />
-    <ClInclude Include="..\Codec\CodecManager.h" />
-    <ClInclude Include="..\Codec\Common.h" />
     <ClInclude Include="..\Codec\Decoder.h" />
     <ClInclude Include="..\Codec\Encoder.h" />
+    <ClInclude Include="..\Common\Common.h" />
     <ClInclude Include="..\Common\CommonDef.h" />
     <ClInclude Include="..\Common\Common_Protocol.h" />
     <ClInclude Include="..\Common\ConnectSocket.h" />
+    <ClInclude Include="..\Common\ObjectManager.h" />
     <ClInclude Include="..\Common\SocketThread.h" />
     <ClInclude Include="..\Multiplex\Demuxer.h" />
+    <ClInclude Include="..\Multiplex\Mux.h" />
+    <ClInclude Include="..\Multiplex\Muxer.h" />
     <ClInclude Include="Network\Listen\ListenSocket.h" />
-    <ClInclude Include="Network\Listen\WinListenSocket.h" />
     <ClInclude Include="Network\Session\SessionSocket.h" />
     <ClInclude Include="Network\Session\SessionThread.h" />
     <ClInclude Include="stdafx.h" />
