--- a/WindowClient/WindowClient.vcxproj
+++ b/WindowClient/WindowClient.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{AAB4FFFA-509E-4A85-A6A4-5CA0845C0147}</ProjectGuid>
     <RootNamespace>WindowClient</RootNamespace>
     <Keyword>MFCProj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -25,7 +26,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>Dynamic</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -60,7 +61,7 @@
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>./;../Common/;../Codec/;../Multiplex/;../FFMPEG/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./;../Common/;../Codec/;../Multiplex/;../FFMPEG/Win/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;__STDC_CONSTANT_MACROS;__STDC_FORMAT_MACROS;_WINDOWS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -78,7 +79,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalLibraryDirectories>../FFMPEG/lib/32bit</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../FFMPEG/Win/lib/32bit</AdditionalLibraryDirectories>
       <AdditionalOptions>/safeseh:no %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
@@ -114,13 +115,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Codec\Codec.cpp" />
-    <ClCompile Include="..\Codec\CodecManager.cpp" />
     <ClCompile Include="..\Codec\Decoder.cpp" />
     <ClCompile Include="..\Codec\Encoder.cpp" />
     <ClCompile Include="..\Common\ConnectSocket.cpp" />
+    <ClCompile Include="..\Common\ObjectManager.cpp" />
     <ClCompile Include="..\Common\SocketThread.cpp" />
+    <ClCompile Include="..\Multiplex\Demuxer.cpp" />
+    <ClCompile Include="..\Multiplex\Muxer.cpp" />
     <ClCompile Include="ClientSocket.cpp" />
     <ClCompile Include="ClientThread.cpp" />
+    <ClCompile Include="ScreenWnd.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -130,17 +134,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Codec\Codec.h" />
-    <ClInclude Include="..\Codec\CodecManager.h" />
     <ClInclude Include="..\Codec\Common.h" />
     <ClInclude Include="..\Codec\Decoder.h" />
     <ClInclude Include="..\Codec\Encoder.h" />
     <ClInclude Include="..\Common\CommonDef.h" />
     <ClInclude Include="..\Common\Common_Protocol.h" />
     <ClInclude Include="..\Common\ConnectSocket.h" />
+    <ClInclude Include="..\Common\ObjectManager.h" />
     <ClInclude Include="..\Common\SocketThread.h" />
+    <ClInclude Include="..\Multiplex\Demuxer.h" />
+    <ClInclude Include="..\Multiplex\Mux.h" />
+    <ClInclude Include="..\Multiplex\Muxer.h" />
     <ClInclude Include="ClientSocket.h" />
     <ClInclude Include="ClientThread.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ScreenWnd.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WindowClient.h" />
